--- a/modules/core/content_common/app/views/contents/_html_header.html.haml
+++ b/modules/core/content_common/app/views/contents/_html_header.html.haml
@@ -3,12 +3,12 @@
 -#   no_user_info: boolean
 
 -#- if content.categorizings[0].model_updated_at > Time.now
--#  = image_tag('sticky.png')
+-#  = theme_image_tag('sticky.png')
 -#  |
 
 - if content.class.column_names.include?('views')
   %span.views
-    = image_tag('views.png', :title => t('common.number_of_views'))
+    = theme_image_tag('views.png', :title => t('common.number_of_views'))
     = content.views
   |
 
