--- a/modules/core/content_toc/app/views/toc_block/_show.html.haml
+++ b/modules/core/content_toc/app/views/toc_block/_show.html.haml
@@ -1,4 +1,4 @@
 = sanitize(toc.introduction)
 = sanitize(toc.table_of_contents)
 
-= link_to(image_tag('edit.png'), edit_toc_path(toc, :version => toc.version), :title => t('common.edit'))
+= link_to(theme_image_tag('edit.png'), edit_toc_path(toc, :version => toc.version), :title => t('common.edit'))
