--- a/modules/core/content_toc/app/views/tocs/_index_title.html.haml
+++ b/modules/core/content_toc/app/views/tocs/_index_title.html.haml
@@ -1,1 +1,1 @@
-= link_to(content.title + (content_recent?(content) ? (' ' + image_tag('new.png')) : ''), toc_path(content))
+= link_to(content.title + (content_recent?(content) ? (' ' + theme_image_tag('new.png')) : ''), toc_path(content))
