--- a/modules/core/content_toc/app/views/tocs/version.html.haml
+++ b/modules/core/content_toc/app/views/tocs/version.html.haml
@@ -6,4 +6,4 @@
 %p
   - if !@effective_version.nil?
     = html_content_version_pager(@toc, @effective_version)
-    = link_to(image_tag('edit.png'), edit_toc_path(@toc, :version => @toc.version), :name => t('common.edit'))
+    = link_to(theme_image_tag('edit.png'), edit_toc_path(@toc, :version => @toc.version), :name => t('common.edit'))
