--- a/app/views/layouts/_head.html.haml
+++ b/app/views/layouts/_head.html.haml
@@ -1,5 +1,5 @@
 %meta{'http-equiv' => 'content-type', :content => 'text/html; charset=utf-8'}
-%link{:rel => 'shortcut icon', :href => image_path('/favicon.ico'), :type => 'image/x-icon'}
+%link{:rel => 'shortcut icon', :href => theme_image_path('favicon.ico'), :type => 'image/x-icon'}
 = auto_discovery_link_tag(:atom, {:controller => 'local_feeds', :action => 'root', :format => :atom})
 
 %title= h(title_from_breadcrumbs || SiteConf.instance.title)
