Use theme_image_tag in theme

--- a/themes/qwilm/app/views/layouts/page.html.haml
+++ b/themes/qwilm/app/views/layouts/page.html.haml
@@ -3,8 +3,8 @@
   %head= mod[:head]
   %body
     #mini_nav
-      = link_to(image_tag('../themes/qwilm/images/root.gif'), root_path)
-      = link_to(image_tag('../themes/qwilm/images/feed.gif'), root_path)
+      = link_to(theme_image_tag('root.gif'), root_path)
+      = link_to(theme_image_tag('feed.gif'), root_path)
     #container
       #content= mod[:regions][:content]
       .sidebar#sidebar1= mod[:regions][:sidebar1]
