--- a/modules/standard/content_article/app/views/articles/_index_preview.html.haml
+++ b/modules/standard/content_article/app/views/articles/_index_preview.html.haml
@@ -1,11 +1,11 @@
 - # Inputs:
 - #   content
 
-- bliki = content
+- article = content
 
-%h2= link_to(bliki.title, bliki_path(bliki))
-= html_content_header(bliki)
+%h2= link_to(article.title, article_path(article))
+= html_content_header(article)
 
-.bliki_introduction= sanitize(bliki.introduction)
+.article_introduction= sanitize(article.introduction)
 
-= html_comment_last(bliki)
+= html_comment_last(article)
