--- a/modules/standard/content_article/app/views/articles/show.html.haml
+++ b/modules/standard/content_article/app/views/articles/show.html.haml
@@ -2,6 +2,6 @@
 #article_versions= render(:file => 'articles/version')
 
 = html_content_contributors(@article)
-= html_content_tocs(@article)
+= html_content_groups(@article)
 = html_content_bookmarks(@article)
 = html_comment_all(@article)
