--- a/modules/standard/content_event/app/views/events/show.html.haml
+++ b/modules/standard/content_event/app/views/events/show.html.haml
@@ -38,6 +38,6 @@
 - if mod[:me].nil?
   %p.notice= t('content_event.login_to_join')
 
-= html_content_tocs(@event)
+= html_content_groups(@event)
 = html_content_bookmarks(@event)
 = html_comment_all(@event)
