--- a/modules/core/content_common/app/views/contents/_index_previews.html.haml
+++ b/modules/core/content_common/app/views/contents/_index_previews.html.haml
@@ -1,7 +1,6 @@
 -# Inputs:
 -#   contents: may contain different types of contents
 -#   options: params for paginating_links
--#   no_last_comment: boolean
 
 #previews
   - contents.each do |n|
@@ -14,6 +13,6 @@
       %h2= link_to(n.title, content_show_path(n))
       = html_content_header(n, no_user_info)
       = sanitize(html_preview)
-      = html_comment_last(n) unless no_last_comment
+      = html_comment_last(n)
 
   %p.pager= paginating_links(contents, {:window_size => 5, :params => options}, :onclick => "return OpenKH.showPage('previews', this.href)")
