--- a/modules/core/content_common/app/views/contents/_html_header.html.haml
+++ b/modules/core/content_common/app/views/contents/_html_header.html.haml
@@ -16,4 +16,4 @@
   - links = content.categories.map { |c| link_to(c.name, category_path(c.slug)) }
   = links.join(', ')
 
-= html_content_user_info(content) unless no_user_info unless no_user_info
+= html_content_user_info(content) unless no_user_info
