Display full user name in feed

--- a/themes/qwilm/app/views/layouts/page.html.haml
+++ b/themes/qwilm/app/views/layouts/page.html.haml
@@ -4,7 +4,7 @@
   %body
     #mini_nav
       = link_to(theme_image_tag('root.gif'), root_path)
-      = link_to(theme_image_tag('feed.gif'), root_path)
+      = link_to(theme_image_tag('feed.gif'), feed_path)
     #container
       #content= mod[:regions][:content]
       .sidebar#sidebar1= mod[:regions][:sidebar1]
