--- a/modules/core/content_common/app/views/contents/_index_previews.html.haml
+++ b/modules/core/content_common/app/views/contents/_index_previews.html.haml
@@ -12,7 +12,7 @@
     .preview
       %h2= link_to(n.title, content_show_path(n))
       = html_content_header(n, no_user_info)
-      = sanitize(html_preview)
+      = html_preview
       = html_comment_last(n)
 
   %p.pager= paginating_links(contents, {:window_size => 5, :params => options}, :onclick => "return OpenKH.showPage('previews', this.href)")
