--- a/modules/core/comment/app/views/comments/_last.html.haml
+++ b/modules/core/comment/app/views/comments/_last.html.haml
@@ -4,7 +4,7 @@
 
 - dt = time_ago_in_words(comment.updated_at)
 - key = (comment.updated_at > comment.created_at)? 'common.updated_ago' : 'common.time_ago'
-- extra_row = t(key, :dt => dt)
+- extra_row = t(key, :dt => dt).capitalize
 
 .comments_last
   = html_user_info(comment.user, extra_row)
