Fix theme black-splat and dum-dum

--- a/themes/black-splat/app/stylesheets/style.sass
+++ b/themes/black-splat/app/stylesheets/style.sass
@@ -32,7 +32,7 @@ a
 
 
 blockquote
-  :background url(../images/bquotes.gif) left top no-repeat
+  :background url(../themes/black-splat/images/bquotes.gif) left top no-repeat
   :padding-left 35px
   :margin 10px 0 0 10px
   :font-style italic
@@ -54,18 +54,18 @@ body
 #wrapper
   :width 980px
   :text-align left
-  :background url(../images/topcurve.png) 40px 0 no-repeat
+  :background url(../themes/black-splat/images/topcurve.png) 40px 0 no-repeat
 
 
 #headerwrapper
-  :background url(../images/topsplatleft.png) left top no-repeat
+  :background url(../themes/black-splat/images/topsplatleft.png) left top no-repeat
 
 
 #header
   :margin 0 40px
   :padding-top 55px
   :height 140px
-  :background url(../images/bgheader.jpg) left 55px repeat-x
+  :background url(../themes/black-splat/images/bgheader.jpg) left 55px repeat-x
 
   h1
     :padding 0
@@ -148,7 +148,7 @@ body
   :padding-top 7px
   :height 28px
   :background #ccc
-  :background url(../images/bgsearch.jpg) left 3px no-repeat
+  :background url(../themes/black-splat/images/bgsearch.jpg) left 3px no-repeat
 
 
 #searchbox
@@ -259,7 +259,7 @@ ol
   #submit
     :width 118px
     :height 30px
-    :background url(../images/commentbutton.jpg) left top no-repeat
+    :background url(../themes/black-splat/images/commentbutton.jpg) left top no-repeat
     :border none
     :font-size 9pt
     :color #fff
@@ -286,7 +286,7 @@ ol
   :padding-left 25px
   :font-size 9pt
   :color #727248
-  :background url(../images/comment.jpg) left 5px no-repeat
+  :background url(../themes/black-splat/images/comment.jpg) left 5px no-repeat
 
 
 p
@@ -296,7 +296,7 @@ p
 
     a
       :padding-left 20px
-      :background url(../images/comment.jpg) left top no-repeat
+      :background url(../themes/black-splat/images/comment.jpg) left top no-repeat
       :font-size 10pt
       :text-decoration none
 
@@ -308,7 +308,7 @@ p
 
     a
       :padding-left 20px
-      :background url(../images/comment.jpg) left top no-repeat
+      :background url(../themes/black-splat/images/comment.jpg) left top no-repeat
       :font-size 10pt
 
 
@@ -371,7 +371,7 @@ textarea
       :margin 0
       :padding 3px 2px 2px 16px
       :color #333
-      :background url(../images/bullet.gif) left 7px no-repeat
+      :background url(../themes/black-splat/images/bullet.gif) left 7px no-repeat
       :line-height 17px
 
     &.children
@@ -428,12 +428,12 @@ textarea
 #footerwrapper
   :clear both
   :height 158px
-  :background url(../images/bottomsplatright.png) right bottom no-repeat
+  :background url(../themes/black-splat/images/bottomsplatright.png) right bottom no-repeat
 
 
 #footer
   :margin 0 40px
-  :background #fff url(../images/bgfooter.png) left top repeat-x
+  :background #fff url(../themes/black-splat/images/bgfooter.png) left top repeat-x
 
   p
     :font-size 10pt
@@ -459,7 +459,7 @@ textarea
   :clear both
   :width 900px
   :height 55px
-  :background url(../images/bottomcurve.png) left bottom no-repeat
+  :background url(../themes/black-splat/images/bottomcurve.png) left bottom no-repeat
 
   span
     :float right
