--- a/themes/dum-dum/app/stylesheets/style.sass
+++ b/themes/dum-dum/app/stylesheets/style.sass
@@ -36,7 +36,7 @@
   :margin-bottom 10px
   :float right
   :text-align right
-  :background transparent url(../images/img_04.jpg) right top no-repeat
+  :background transparent url(../themes/dum-dum/images/img_04.jpg) right top no-repeat
   :padding-right 6px
 
   li
@@ -66,7 +66,7 @@
   :height 24px
   :float right
   :text-align right
-  :background #9B6B3A url(../images/img_03.jpg) left top no-repeat
+  :background #9B6B3A url(../themes/dum-dum/images/img_03.jpg) left top no-repeat
 
 
 .current_page_item a
@@ -77,7 +77,7 @@
   :margin-top 10px
   :float left
   :width 524px
-  :background url(../images/img_10.jpg) center repeat-y
+  :background url(../themes/dum-dum/images/img_10.jpg) center repeat-y
 
 
 .contenttext
@@ -91,7 +91,7 @@
 
 .postdate
   :padding-bottom 10px
-  :background transparent url(../images/img_16.jpg) left top no-repeat
+  :background transparent url(../themes/dum-dum/images/img_16.jpg) left top no-repeat
   :height 37px
   :width 39px
   :text-align left
@@ -143,7 +143,7 @@
 
 .postauthor
   :height 26px
-  :background transparent url(../images/img_19.jpg) left center no-repeat
+  :background transparent url(../themes/dum-dum/images/img_19.jpg) left center no-repeat
   :padding-left 15px
   :padding-top 4px
   :margin-right 20px
@@ -158,7 +158,7 @@
   :float left
   :padding-left 15px
   :padding-top 4px
-  :background transparent url(../images/img_21.jpg) left center no-repeat
+  :background transparent url(../themes/dum-dum/images/img_21.jpg) left center no-repeat
   :font-family Verdana, Arial, Helvetica, sans-serif
   :color #979795
   :font-size 10px
@@ -177,7 +177,7 @@
 
   blockquote
     :padding 5px 5px 5px 40px
-    :background #F1FAFF url(../images/img_28.jpg) top left no-repeat
+    :background #F1FAFF url(../themes/dum-dum/images/img_28.jpg) top left no-repeat
     :margin 5px 0px
     :color #1F89C7
     :border dashed 1px #D8ECF7
@@ -198,7 +198,7 @@
   :font-family Verdana, Arial, Helvetica, sans-serif
   :font-size 11px
   :height 32px
-  :background #FCF2C1 url(../images/img_30.jpg) left top no-repeat
+  :background #FCF2C1 url(../themes/dum-dum/images/img_30.jpg) left top no-repeat
   :display table
   :#position relative
   :width 490px
@@ -214,7 +214,7 @@
 
 
 .postfooter2
-  :background url(../images/img_31.jpg) right top no-repeat
+  :background url(../themes/dum-dum/images/img_31.jpg) right top no-repeat
 
   h3
     :text-align center
@@ -227,7 +227,7 @@
 .postcomments
   :margin-top 9px
   :margin-left 6px
-  :background transparent url(../images/img_36.jpg) left center no-repeat
+  :background transparent url(../themes/dum-dum/images/img_36.jpg) left center no-repeat
   :height 20px
   :padding-left 18px
   :color #6A330C
@@ -236,7 +236,7 @@
 
 .posttags
   :margin-left 20px
-  :background url(../images/img_42.jpg) left center no-repeat
+  :background url(../themes/dum-dum/images/img_42.jpg) left center no-repeat
   :height 20px
   :padding-left 18px
   :color #9B9796
@@ -255,7 +255,7 @@
 .postnr
   :width 50px
   :height 31px
-  :background #F7E382 url(../images/img_33.jpg) right top no-repeat
+  :background #F7E382 url(../themes/dum-dum/images/img_33.jpg) right top no-repeat
   :float right
   :text-align center
   :padding-top 1px
@@ -267,7 +267,7 @@
   :padding-top 4px
   :margin-left 7px
   :margin-top 4px
-  :background transparent url(../images/img_39.jpg) left center no-repeat
+  :background transparent url(../themes/dum-dum/images/img_39.jpg) left center no-repeat
   :height 20px
   :color #6A330C
 
@@ -333,7 +333,7 @@ h3.single_h3
     :background-color #F2AF6B
 
   #s
-    :background #f7e382 url(../images/search-bg.jpg) left top no-repeat
+    :background #f7e382 url(../themes/dum-dum/images/search-bg.jpg) left top no-repeat
     :height 22px
     :margin-top 0px
     :vertical-align top
@@ -347,19 +347,19 @@ h3.single_h3
 
 .box1
   :width 223px
-  :background #FAEFB9 url(../images/img_13.jpg) center top no-repeat
+  :background #FAEFB9 url(../themes/dum-dum/images/img_13.jpg) center top no-repeat
   :margin-bottom 15px
 
 
 .box2
   :width 223px
-  :background #F7B9BA url(../images/img_29.jpg) center top no-repeat
+  :background #F7B9BA url(../themes/dum-dum/images/img_29.jpg) center top no-repeat
   :margin-bottom 15px
 
 
 .box3
   :width 223px
-  :background #F8D7B6 url(../images/img_52.jpg) center top no-repeat
+  :background #F8D7B6 url(../themes/dum-dum/images/img_52.jpg) center top no-repeat
   :margin-bottom 15px
 
 
@@ -367,7 +367,7 @@ h3.single_h3
   :min-height 120px
   :padding 12px
   :padding-bottom 20px
-  :background url(../images/img_27.jpg) bottom no-repeat
+  :background url(../themes/dum-dum/images/img_27.jpg) bottom no-repeat
 
 
 .box2text,  .box3text
@@ -377,12 +377,12 @@ h3.single_h3
 
 .box2text
   :padding-bottom 20px
-  :background url(../images/img_50.jpg) bottom no-repeat
+  :background url(../themes/dum-dum/images/img_50.jpg) bottom no-repeat
 
 
 .box3text
   :padding-bottom 20px
-  :background url(../images/img_54.jpg) bottom no-repeat
+  :background url(../themes/dum-dum/images/img_54.jpg) bottom no-repeat
 
 
 .sidebar .box3 h2
@@ -392,7 +392,7 @@ h3.single_h3
 
 .footer
   :margin-top 10px
-  :background #f7e382 url(../images/footer-left.jpg) left top no-repeat
+  :background #f7e382 url(../themes/dum-dum/images/footer-left.jpg) left top no-repeat
 
   a
     :color #9D6B3A
@@ -406,7 +406,7 @@ h3.single_h3
   :padding-left 15px
   :font-size 11px
   :font-family Verdana, Arial, Helvetica, sans-serif
-  :background url(../images/footer-right.jpg) right top no-repeat
+  :background url(../themes/dum-dum/images/footer-right.jpg) right top no-repeat
 
 
 a.design
@@ -414,7 +414,7 @@ a.design
   :display block
   :width 84px
   :height 20px
-  :background url(../images/designed-by.jpg) top center no-repeat
+  :background url(../themes/dum-dum/images/designed-by.jpg) top center no-repeat
   :text-decoration none
   :float right
 
@@ -466,7 +466,7 @@ ol.commentlist
 
 
 .time
-  :background url(../images/time.png) no-repeat 1px
+  :background url(../themes/dum-dum/images/time.png) no-repeat 1px
   :padding-left 20px
   :color #FFFFFF
 
@@ -550,10 +550,10 @@ ol.commentlist
   :color #95513A
   :font-weight bold
   :padding-top 3px
-  :background url(../images/nav-bg.jpg) top center no-repeat
+  :background url(../themes/dum-dum/images/nav-bg.jpg) top center no-repeat
 
   &:hover
-    :background url(../images/nav-bg-hover.jpg) top center no-repeat
+    :background url(../themes/dum-dum/images/nav-bg-hover.jpg) top center no-repeat
 
 
 .notfound
