--- a/themes/dum-dum/public/stylesheets/ie7.css
+++ b/themes/dum-dum/public/stylesheets/ie7.css
@@ -1,6 +1,6 @@
 .posttags {
 margin-left: 20px;
-background: url(images/img_42.jpg) left center no-repeat;
+background: url(../themes/dum-dum/images/img_42.jpg) left center no-repeat;
 height: 20px;
 padding-left: 18px;
 color: #9B9796;
