--- a/app/views/layouts/_block.html.haml
+++ b/app/views/layouts/_block.html.haml
@@ -2,5 +2,6 @@
 - #   region, title, content
 
 - unless title.blank?
-  %h2.title= h(title)
-= content
+  %h2.block_title= h(title)
+
+.block_content= content
