--- a/modules/standard/content_qa/app/views/qas/new.html.haml
+++ b/modules/standard/content_qa/app/views/qas/new.html.haml
@@ -6,8 +6,8 @@
   = f.label(:title)
   = f.text_field(:title)
 
-  = f.label(:message)
-  ~ f.text_area(:message)
+  = f.label(:body)
+  ~ f.text_area(:body)
 
   = f.label(:categories)
   %ul
