Move gravatar to the title of current user block

--- a/app/views/layouts/_block.html.haml
+++ b/app/views/layouts/_block.html.haml
@@ -1,7 +1,7 @@
-- # Inputs:
-- #   region, title, content
+-# Inputs:
+-#   region, title, content
 
 - unless title.blank?
-  %h2.block_title= h(title)
+  %h2.block_title= title
 
 .block_content= content
