--- a/modules/standard/chat/app/views/chat_block/_show.html.haml
+++ b/modules/standard/chat/app/views/chat_block/_show.html.haml
@@ -9,6 +9,6 @@
 = text_field_tag('chat_input')
 
 = javascript_include_tag('chat')
-%script{:type => 'text/javascript'}
+:javascript
   $('#chat_input').keydown(OpenKH.chat.onKeyDown);
-  == OpenKH.chat.embed('#{h(block.remote_port)}', '#{request.session_options[:id]}')
+  OpenKH.chat.embed('#{h(block.remote_port)}', '#{request.session_options[:id]}')
