--- a/modules/standard/google_map/app/views/google_map_block/_form.html.haml
+++ b/modules/standard/google_map/app/views/google_map_block/_form.html.haml
@@ -33,67 +33,70 @@
   = hidden_field_tag("google_map_block[markers][#{m.id}][html]", m.html)
 
 %script{:src => "http://maps.google.com/maps?file=api&amp;v=2&amp;key=#{GoogleMapConf.instance.key}", :type => 'text/javascript'}
-%script
-  var activeMarker = null;
 
-  :plain
-    function data(type) {
-      return $("input[name='google_map_block[markers][" + activeMarker.id + "][" + type + "]']");
-    }
+:erb
+  <script type='text/javascript'>
+    //<![CDATA[
+      var activeMarker = null;
 
-    function editor(type) {
-      if (type == 'html') {
-        return $("textarea[name='html']");
-      } else {
-        return $("input[name='" + type + "']");
+      function data(type) {
+        return $("input[name='google_map_block[markers][" + activeMarker.id + "][" + type + "]']");
       }
-    }
 
-    $.each(['title', 'html'], function(i, type) {
-      editor(type).change(function() {
-        if (activeMarker != null) {
-          var value = editor(type).attr('value');
-          data(type).attr('value', value);
-          console.debug(value)
+      function editor(type) {
+        if (type == 'html') {
+          return $("textarea[name='html']");
+        } else {
+          return $("input[name='" + type + "']");
         }
-      });
-    });
+      }
 
-  if (GBrowserIsCompatible()) {
-  == var #{div_id} = new GMap2(document.getElementById('#{div_id}'));
-
-  == var center = new GLatLng(#{block.center[:latitude]}, #{block.center[:longitude]});
-
-  == var sw = new GLatLng(#{block.sw_ne[:sw][:s]}, #{block.sw_ne[:sw][:w]});
-  == var ne = new GLatLng(#{block.sw_ne[:ne][:n]}, #{block.sw_ne[:ne][:e]});
-  var bounds = new GLatLngBounds(sw, ne);
-  == var zoomLevel = #{div_id}.getBoundsZoomLevel(bounds) - 1;
-
-  == #{div_id}.setCenter(center, zoomLevel);
-  == #{div_id}.addControl(new GLargeMapControl());
-  == #{div_id}.addControl(new GMapTypeControl());
-
-  var marker;
-  - block.markers.each do |m|
-    == marker = new GMarker(new GLatLng(#{m.latitude}, #{m.longitude}), {title: '#{h(m.title)}', draggable: true});
-    == marker.id = #{m.id};
-
-    :plain
-      GEvent.addListener(marker, 'mousedown', function() {
-        activeMarker = this;
-
-        var id = this.id;
-        $.each(['title', 'html'], function(i, type) {
-          var value = data(type).attr('value');
-          editor(type).attr('value', value);
+      $.each(['title', 'html'], function(i, type) {
+        editor(type).change(function() {
+          if (activeMarker != null) {
+            var value = editor(type).attr('value');
+            data(type).attr('value', value);
+            console.debug(value)
+          }
         });
       });
 
-      // mousedown is called before drag
-      GEvent.addListener(marker, 'drag', function(latlng) {
-        data('latitude').attr('value', latlng.lat());
-        data('longitude').attr('value', latlng.lng());
-      });
+      if (GBrowserIsCompatible()) {
+        var <%= div_id %> = new GMap2(document.getElementById('<%= div_id %>'));
 
-    == #{div_id}.addOverlay(marker);
-  }
+        var center = new GLatLng(<%= block.center[:latitude] %>, <%= block.center[:longitude] %>);
+
+        var sw = new GLatLng(<%= block.sw_ne[:sw][:s] %>, <%= block.sw_ne[:sw][:w] %>);
+        var ne = new GLatLng(<%= block.sw_ne[:ne][:n] %>, <%= block.sw_ne[:ne][:e] %>);
+        var bounds = new GLatLngBounds(sw, ne);
+        var zoomLevel = <%= div_id %>.getBoundsZoomLevel(bounds) - 1;
+
+        <%= div_id %>.setCenter(center, zoomLevel);
+        <%= div_id %>.addControl(new GLargeMapControl());
+        <%= div_id %>.addControl(new GMapTypeControl());
+
+        var marker;
+        - block.markers.each do |m|
+          marker = new GMarker(new GLatLng(<%= m.latitude %>, <%= m.longitude %>), {title: '<%= h(m.title) %>', draggable: true});
+          marker.id = <%= m.id %>;
+
+        GEvent.addListener(marker, 'mousedown', function() {
+          activeMarker = this;
+
+          var id = this.id;
+          $.each(['title', 'html'], function(i, type) {
+            var value = data(type).attr('value');
+            editor(type).attr('value', value);
+          });
+        });
+
+        // mousedown is called before drag
+        GEvent.addListener(marker, 'drag', function(latlng) {
+          data('latitude').attr('value', latlng.lat());
+          data('longitude').attr('value', latlng.lng());
+        });
+
+        <%= div_id %>.addOverlay(marker);
+      }
+    //]]>
+  </script>
