--- a/modules/standard/google_map/app/views/google_map_block/_show.html.haml
+++ b/modules/standard/google_map/app/views/google_map_block/_show.html.haml
@@ -11,29 +11,36 @@
   %div{:id => div_id, :class => 'no_resize_images', :style => "width:#{block.width}; height:#{block.height}"}
 
 %script{:src => "http://maps.google.com/maps?file=api&amp;v=2&amp;key=#{GoogleMapConf.instance.key}", :type => 'text/javascript'}
-%script{:type => 'text/javascript'}
-  == var #{div_id};
 
-  $(document).ready(function () {
-  if (GBrowserIsCompatible()) {
-  == #{div_id} = new GMap2(document.getElementById('#{div_id}'));
+:erb
+  <script type='text/javascript'>
+    //<![CDATA[
+      var <%= div_id %>;
 
-  == var center = new GLatLng(#{block.center[:latitude]}, #{block.center[:longitude]});
+      $(document).ready(function () {
+        if (GBrowserIsCompatible()) {
+          <%= div_id %> = new GMap2(document.getElementById('<%= div_id %>'));
 
-  == var sw = new GLatLng(#{block.sw_ne[:sw][:s]}, #{block.sw_ne[:sw][:w]});
-  == var ne = new GLatLng(#{block.sw_ne[:ne][:n]}, #{block.sw_ne[:ne][:e]});
-  var bounds = new GLatLngBounds(sw, ne);
-  == var zoomLevel = #{div_id}.getBoundsZoomLevel(bounds) - 1;
+          var center = new GLatLng(<%= block.center[:latitude] %>, <%= block.center[:longitude] %>);
 
-  == #{div_id}.setCenter(center, zoomLevel);
-  == #{div_id}.addControl(new GLargeMapControl());
-  == #{div_id}.addControl(new GMapTypeControl());
+          var sw = new GLatLng(<%= block.sw_ne[:sw][:s] %>, <%= block.sw_ne[:sw][:w] %>);
+          var ne = new GLatLng(<%= block.sw_ne[:ne][:n] %>, <%= block.sw_ne[:ne][:e] %>);
+          var bounds = new GLatLngBounds(sw, ne);
+          var zoomLevel = <%= div_id %>.getBoundsZoomLevel(bounds) - 1;
 
-  var marker;
-  - block.markers.each do |m|
-    == marker = new GMarker(new GLatLng(#{m.latitude}, #{m.longitude}), {title: '#{h(m.title)}'});
-    - unless m.html.blank?
-      == marker.bindInfoWindowHtml("#{escape_javascript(m.html)}");
-    == #{div_id}.addOverlay(marker);
-  }
-  });
+          <%= div_id %>.setCenter(center, zoomLevel);
+          <%= div_id %>.addControl(new GLargeMapControl());
+          <%= div_id %>.addControl(new GMapTypeControl());
+
+          var marker;
+          <% block.markers.each do |m| %>
+            marker = new GMarker(new GLatLng(<%= m.latitude %>, <%= m.longitude %>), {title: '<%= h(m.title) %>'});
+            <% unless m.html.blank? %>
+              marker.bindInfoWindowHtml("#{escape_javascript(m.html)}");
+            <% end %>
+            <%= div_id %>.addOverlay(marker);
+          <% end %>
+        }
+      });
+    //]]>
+  </script>
