--- a/modules/standard/google_search/app/views/google_search/index.html.haml
+++ b/modules/standard/google_search/app/views/google_search/index.html.haml
@@ -1,8 +1,8 @@
 %div{:id => "results_#{CONF[:google_search_key]}"}
 
-%script{:type => 'text/javascript'}
-  == var googleSearchIframeName = "results_#{CONF[:google_search_key]}";
-  == var googleSearchFormName = "searchbox_#{CONF[:google_search_key]}";
+:javascript
+  var googleSearchIframeName = "results_#{CONF[:google_search_key]}";
+  var googleSearchFormName = "searchbox_#{CONF[:google_search_key]}";
   var googleSearchFrameWidth = 600;
   var googleSearchFrameborder = 0;
   var googleSearchDomain = 'www.google.com';
