--- a/app/views/layouts/_head.html.haml
+++ b/app/views/layouts/_head.html.haml
@@ -36,6 +36,6 @@
       theme_advanced_buttons3: '',
       extended_valid_elements: 'code',
 
-      -# Source-code-friendly
+      // Source-code-friendly
       remove_linebreaks: false
     });
