--- a/modules/core/category/app/views/links/_form.html.haml
+++ b/modules/core/category/app/views/links/_form.html.haml
@@ -1,4 +1,4 @@
-- form_for(@toc, :html => {:onsubmit => 'tinyMCE.triggerSave(); return captcha.show(this);'}) do |f|
+- form_for(@link, :html => {:onsubmit => 'tinyMCE.triggerSave(); return captcha.show(this);'}) do |f|
   = f.error_messages
 
   = f.hidden_field(:category_id)
